fix(research-view.component.ts): fix a little error

--- a/src/app/detail-view/detail-view.component.html
+++ b/src/app/detail-view/detail-view.component.html
@@ -82,7 +82,7 @@
       </mat-tab>
       <mat-tab label="Geo informations">
         <mat-list role="list">
-          <mat-list-item role="listitem">Area : {{m_country.area}}</mat-list-item>
+          <mat-list-item role="listitem">Area : {{m_country.area}}km²</mat-list-item>
           <mat-list-item role="listitem">
             <div>Region :</div>
             <a mat-button routerLink="/research/region/{{m_country.region}}">{{m_country.region}}</a>
